Fix track-info with bug
80%-width on track-info divs cause a not intended break on Firefox and
IE

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -272,7 +272,7 @@ div.track-counter {
 
 div.track-info {
     height: 100%;
-    width: 80%;
+    width: 75%;
     display: inline-block;
     vertical-align: middle;
 }
